White space issue fix

--- a/themes/jobhunt/client/scss/main.scss
+++ b/themes/jobhunt/client/scss/main.scss
@@ -1,6 +1,10 @@
 @import 'dragula/dist/dragula.css';
 
 body {
+    .badge {
+        white-space: normal !important;
+        text-align: left;
+    }
     .navbar-expand-lg .navbar-nav .dropdown-menu {
         z-index: 9999;
     }
